Rework of response.status + loader. Some visual fixes. Age visible for authors.

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,6 +8,7 @@ html,body{
 }
 main{
     min-height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -17,6 +18,7 @@ main{
     .quote_page__container{
         display: flex;
         flex-direction: column;
+        width: 100%;
         .quote-page__character{
             min-height: 300px;
             width: 100%;
